Add Unsplash API

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Configuration file
+environment.localhost.ts
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
